syntax = "proto3";

package auth;

import "google/api/annotations.proto";

option go_package = "github.com/abhayishere/lokrr-auth-service/protogen/golang";


service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse){
    option (google.api.http) = {
      post: "/v1/register" // Defines the REST POST endpoint
      body: "*"            // Maps the entire request body to the RPC input
    };
  }
  rpc Login (LoginRequest) returns (LoginResponse){
    option (google.api.http) = {
      post: "/v1/login" // Defines the REST POST endpoint
      body: "*"         // Maps the entire request body to the RPC input
    };
  }
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string user_id = 1;
  string message = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string user_id = 1;
  string token = 2;
}
